--- a/src/components/Navigate.module.css
+++ b/src/components/Navigate.module.css
@@ -5,7 +5,8 @@
   height: 50px;
   padding: 0 1.25rem;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  font-size: 1.25rem;
+  font-size: 1.25rem; /* 20px */
+  line-height: 1.75rem; /* 28px */
   font-weight: 700;
   text-transform: uppercase;
   background-color: #0d9488;
