feat: logic SelectedPage

--- a/src/pages/HomePage/Card/Card.module.css
+++ b/src/pages/HomePage/Card/Card.module.css
@@ -10,6 +10,11 @@
   line-height: 1.5rem; /* 28px */
   border-radius: 1rem; /* 16px */
   margin-bottom: 10px;
+  transition: .5s;
+}
+
+.card:hover {
+  transform: scale(0.9);
 }
 
 .image {
