feat: add button logic

--- a/src/pages/HomePage/Card/Card.module.css
+++ b/src/pages/HomePage/Card/Card.module.css
@@ -10,13 +10,13 @@
   line-height: 1.5rem; /* 28px */
   border-radius: 1rem; /* 16px */
   margin-bottom: 10px;
-  transition: .5s;
+  /* transition: .5s; */
   cursor: help;
 }
 
-.card:hover {
+/* .card:hover {
   transform: scale(0.9);
-}
+} */
 
 .image {
   width: 100%;
