--- a/src/components/Navigate.module.css
+++ b/src/components/Navigate.module.css
@@ -21,3 +21,39 @@
 .link:hover {
   transform: scale(1.1);
 }
+
+.cauntThinks {
+  position: relative;
+  bottom: -.75rem;
+  padding: 0 5px;
+  width: 20px;
+  height: 20px;
+  line-height: 50px;
+  background: rgb(255, 255, 255);
+  margin-right: 0.25rem;
+  border-radius: 50%;
+  text-align: center;
+  color: rgb(252, 66, 66);
+}
+/* .container {
+  display: inline-block;
+  position: relative;
+}
+
+.span {
+  display: inline-block;
+  background: #ccc;
+  color: #000;
+  text-align: center;
+  border-radius: 50%;
+  padding: 50% 0;
+  width: 100%;
+  position: absolute;
+  transform: translateY(-50%);
+}
+
+.text {
+  position: relative;
+  top: -.5em;
+  padding: 0em 0.65em;
+} */
