--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -17,16 +17,16 @@
 
 .filter {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  height: 50px;
+  height: 30px;
+  margin-top: 5px;
   padding: 0 1.25rem;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   font-size: 1.25rem; /* 20px */
   line-height: 1.75rem; /* 28px */
   font-weight: 700;
-  text-transform: uppercase;
-  background-color: #0d9488;
+  /* text-transform: uppercase; */
+  background-color: #b4dad6;
 }
 
 .container {
