--- a/src/pages/HomePage/Card/Card.module.css
+++ b/src/pages/HomePage/Card/Card.module.css
@@ -3,12 +3,16 @@
   align-items: center;
   text-align: center;
   /* padding: 0 5px; */
-  padding: 0.5rem; /* 8px */
+  padding: 0.5rem;
+  /* 8px */
   background-color: #0d9488;
   color: white;
-  font-size: 1rem; /* 18px */
-  line-height: 1.5rem; /* 28px */
-  border-radius: 1rem; /* 16px */
+  font-size: 1rem;
+  /* 18px */
+  line-height: 1.5rem;
+  /* 28px */
+  border-radius: 1rem;
+  /* 16px */
   margin-bottom: 10px;
   /* transition: .5s; */
   cursor: help;
@@ -21,12 +25,24 @@
 .image {
   width: 100%;
   height: 200px;
-  border-radius: 0.75rem; /* 12px */
+  border-radius: 0.75rem;
+  /* 12px */
 }
 
 .title {
   height: 100px;
   margin: 0;
+}
+
+.bottom {
+  /* display: flex;
+  justify-content: space-evenly; */
+  display: grid;
+  grid-template-columns: repeat(2, 1fr) repeat(3, 0);
+  grid-template-rows: 1fr repeat(4, 0);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  align-items: center;
 }
 
 /* .price {
