--- a/src/pages/HomePage/Card/Card.module.css
+++ b/src/pages/HomePage/Card/Card.module.css
@@ -2,31 +2,31 @@
   position: relative;
   align-items: center;
   text-align: center;
-  /* padding: 0 5px; */
   padding: 0.5rem;
-  /* 8px */
   background-color: #0d9488;
   color: white;
   font-size: 1rem;
-  /* 18px */
   line-height: 1.5rem;
-  /* 28px */
   border-radius: 1rem;
-  /* 16px */
   margin-bottom: 10px;
   /* transition: .5s; */
   cursor: help;
 }
 
-/* .card:hover {
-  transform: scale(0.9);
-} */
-
+.contImage {
+  overflow: hidden;
+  border-radius: 0.75rem;
+  height: 200px;
+}
 .image {
   width: 100%;
-  height: 200px;
+  height: 100%;
   border-radius: 0.75rem;
-  /* 12px */
+  transition: .5s;
+}
+
+.image:hover {
+  transform: scale(1.2);
 }
 
 .title {
