feat: transform buttons

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -6,4 +6,9 @@
   line-height: 1.5rem; /* 28px */
   border-radius: 1rem; /* 16px */
   color: #0d9488;
+  transition: .5s;
+}
+
+.button:hover {
+  transform: scale(1.05);
 }
