--- a/src/components/Navigate/Navigate.module.css
+++ b/src/components/Navigate/Navigate.module.css
@@ -21,3 +21,17 @@
 .link:hover {
   transform: scale(1.1);
 }
+
+.cauntThinks {
+  position: relative;
+  bottom: -.75rem;
+  padding: 0 5px;
+  width: 20px;
+  height: 20px;
+  line-height: 50px;
+  background: rgb(255, 255, 255);
+  margin-right: 0.25rem;
+  border-radius: 50%;
+  text-align: center;
+  color: rgb(110, 41, 41);
+}
