--- a/src/pages/SelectedPage/SelectedPage.module.css
+++ b/src/pages/SelectedPage/SelectedPage.module.css
@@ -16,11 +16,21 @@
   background-color: #0d9488;
 }
 
-.image {
+.contImage {
   grid-area: 1 / 1 / 2 / 2;
   width: 100%;
   height: 400px;
   border-radius: 0.75rem;
+  overflow: hidden;
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+  transition: .4s;
+}
+.image:hover {
+  transform: scale(1.08);
 }
 
 .infoBlock {
